; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_mcache.c_mcache_dispatch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_mcache.c_mcache_dispatch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@hz = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (void (i8*)*, i8*)* @mcache_dispatch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mcache_dispatch(void (i8*)* %0, i8* %1) #0 {
  %3 = alloca void (i8*)*, align 8
  %4 = alloca i8*, align 8
  store void (i8*)* %0, void (i8*)** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load void (i8*)*, void (i8*)** %3, align 8
  %6 = icmp ne void (i8*)* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @ASSERT(i32 %7)
  %9 = load void (i8*)*, void (i8*)** %3, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = load i32, i32* @hz, align 4
  %12 = sdiv i32 %11, 1000
  %13 = call i32 @timeout(void (i8*)* %9, i8* %10, i32 %12)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @timeout(void (i8*)*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
